# tinyplayer

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  CMakeLists.txt.save  README.md  tinyplayer
app/: CMakeLists.txt
src/: .main.cpp.swp  audio_read.cpp  audio_read.h  buffer.cpp  buffer.h  dsp.h  file_system.h  interface.h  main.cpp  playlist.h  stream.cpp  stream.h
src/dsp/: audio_func.cpp  audio_func.h  biquad.cpp  biquad.h  crossfade.cpp  crossfade.h  downmix.cpp  downmix.h  dsp.cpp  dsp.h  eq.cpp  eq.h  fade.cpp  fade.h  gain.cpp  gain.h  hp.cpp  hp.h  lp.cpp  lp.h  lr_bal.cpp  lr_bal.h
src/tinydsp/: audio_func.cpp  audio_func.h  biquad.h  crossfade.cpp  downmix.cpp  dsp.cpp  eq.cpp  eq.h  fade.h  gain.cpp  hp.cpp  hp.h  lp.cpp  lr_bal.h  tinydsp.cpp  tinydsp.h
